# insighta-backend

./: .env.sample  .gitignore  Dockerfile  README.md  SOLUTION.md  fly.toml  pyproject.toml  pyrightconfig.json  requirements.txt  start.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: d5140776243f_initial_schema_with_indexes.py
app/: config.py  database.py  exceptions.py  main.py  models.py
app/core/: tokens.py
app/dependencies/: __init__.py  auth.py  versioning.py
app/middleware/: logging.py  rate_limit.py
app/routers/: admin.py  auth.py  profiles.py  test.py  users.py
app/schemas/: auth.py  nl.py  profiles.py  shared.py  users.py
app/services/: cache.py  external.py  github.py  ingestion.py  nl_parser.py  normalizer.py  profiles.py  seed.py  users.py
scripts/: benchmark.py  benchmark_csv.py  benchmark_ingest.py  generate_test_csv.py  make_admin.py  seed.py
tests/: conftest.py  test_admin.py  test_auth.py  test_profiles.py
