[project]
name = "insighta-backend"
version = "0.1.0"
description = "Backend for insighta"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.27",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.49",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "uvicorn>=0.46.0",
]
