[project]
name = "insighta-backend"
version = "0.1.0"
description = "Backend for insighta"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.27",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.49",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "uvicorn>=0.46.0",
]

[tool.ruff.lint]
select = [ "E", "F", "I", "B", "UP" ]

ignore = [ "E501", "UP017", "B008", "UP042" ]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
